Fixed readability issues

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,6 +6,19 @@
 
 /* You can override the default Infima variables here. */
 :root {
+  --ifm-color-primary: #0084ff;
+  --ifm-color-primary-dark: #0084ff;
+  --ifm-color-primary-darker: #0084ff;
+  --ifm-color-primary-darkest: #0084ff;
+  --ifm-color-primary-light: #0084ff;
+  --ifm-color-primary-lighter: #0084ff;
+  --ifm-color-primary-lightest: #0084ff;
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: #0084ff;
+}
+
+/* For readability concerns, you should choose a lighter palette in dark mode. */
+[data-theme='dark'] {
   --ifm-color-primary: #00ffff;
   --ifm-color-primary-dark: #00ffff;
   --ifm-color-primary-darker: #00ffff;
@@ -13,19 +26,6 @@
   --ifm-color-primary-light: #00ffff;
   --ifm-color-primary-lighter: #00ffff;
   --ifm-color-primary-lightest: #00ffff;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: #00ffff;
-}
-
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: #00ffff;
 }
 
